@@ -1,3 +1,8 @@
+2005-10-06  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (select-javaXX): Also search inherited $CLASSPATH -
+	though last.
+
 2005-10-05  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (select-javaXX): Add "." to CLASSPATH so we find the
